# pygfit

./: README.md  setup.cfg
PSF/: build_psfs.py  calc.py  dataio.py  psfexample.py  wcs.py
PSF/psf/: __init__.py  img_data.py  psf.py  star.py
docs/: README  README_PYGSTI
docs/paper/jun14/: ch1_error_correlations.eps  close_sim.eps  paper.aux  paper.dvi  paper.tex
docs/paper/old/: paper.blg
examples/goods/: alignment.ps  alignment_mag.ps  ch1.config  goods_ch1.rms.fits  goods_ch1_back.fits  goods_ch1_res.fits  goods_ch1_seg.fits  hres.reg  hres_aligned.reg  isolated.ps  pygfit.cat  pygfit.config  pygfit.old.config  pygfit.param  pygfit.warn  pygfit_lres.cat  pygfit_lres.reg  pygfit_lres_fit.reg
examples/goods/models/: 100_fit.fits  100_input.fits  101_fit.fits  101_input.fits  102_fit.fits  102_input.fits  103_fit.fits  103_input.fits  104_fit.fits  104_input.fits  105_fit.fits  105_input.fits  107_fit.fits  107_input.fits  10_input.fits  111_fit.fits  (+141 more)
paper/: close_sim.eps  comments_for_anthony  mag_sims.eps  paper.aux  paper.bbl  paper.dvi  paper.tex  still_todo
paper/jpgs/: 22_panels.eps  panels.eps
paper/jun14/: ch1_error_correlations_sersic.eps  integration.eps  mag_sims_cut.eps  paper.aux  rebuild
paper/old/: notes_for_anthony  pygfit.bib
pygfit/: __init__.py  data_histogram.py  gblend.py  gpu.py  log.py  pygfit.py  pygsti.py  spline.py  utils.py
pygfit/scripts/: merge_pygfit.py
python/: README  README_PYGSTI  __init__.py  cm_utils.py  mapping.py  match.py  point.py  pygfit.py  utils.py
python/models/: __init__.py  point.py  sersic.py
(+522 files in other folders)
