[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pygfit
description = Galaxy Fitting with Low Resolution Data and High Resolution Templates
long_description = This package can be used to fit low resolution, e.g. ground data to measure morphology and photometry, by using high resolution e.g. HST template images/morphologies.
author = Leonidas Moustakas
author_email = leonidas@jpl.nasa.gov
license = BSD
url = http://baryons.org/pygfit
edit_on_github = False
github_project = lmoustakas/pygfit
